<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">游手记</string>
    <string name="action_settings">Setting</string>
    <string name="login">登 录</string>
	<string name="register">新用户注册</string>
	<string name="findPassword">忘记密码?</string>
	<string name="setPassword">重置密码</string>
	<string name="loginHint">已有账号去登录</string>
	<string name="userIdHint">请输入您的手机号</string>
	<string name="passwordHint">请输入您的密码</string>
	<string name="checkCodeHint">请输入验证码</string>
	<string name="getCheckCode">GetCode!</string>
	<string name="title_diary">请添加标题</string>
	<string name="siteInfo">点击左侧按钮开启定位</string>
	<string name="diaryContent">请添加内容</string>
	<string name="weather">天气</string>
	<string name="mood">心情</string>
	<string name="save">保存</string>
	<string name="loadText">正在加载...</string>
	<string name="searchText">在这里搜一搜关键词</string>
	<string name="optionText">删除</string>
	<string name="title_alert">提示信息</string>
	<string name="send">发送</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string-array name="weatherList">
        <item>晴天</item>
        <item>多云</item>
        <item>阴天</item>
        <item>雾霾</item>
        <item>雨天</item>
        <item>雷雨</item>
        <item>雪天</item>
    </string-array>
    <string-array name="moodList">
        <item>开心</item>
        <item>伤心</item>
        <item>生气</item>
        <item>郁闷</item>
        <item>忧愁</item>
        <item>疲惫</item>
    </string-array>
</resources>
